feat(REST API): Add new query paramater to the endpoint to GET the app by appID (AEROGEAR-8913)
