# pkg/web/router/router.go
@@ -39,12 +39,21 @@ func SetAppRoutes(r *echo.Group, appsHandler apps.HTTPHandler) {
 	// operationId: getApps
 	// produces:
 	// - application/json
-	// parameters: []
+	// parameters:
+	// - name: appId
+	//   in: query
+	//   description: The app_id to filter the app by appId
+	//   required: false
+	//   type: string
 	// responses:
 	//   200:
 	//     description: successful operation
 	//     schema:
 	//       $ref: '#/definitions/App'
+	//   204:
+	//     description: successful operation by no apps were found
+	//   404:
+	//     description: App not found
 	r.GET("/apps", appsHandler.GetApps)
 
 	// swagger:operation GET /apps/{id} App
